enlarge base font-size, and fix game attribute margin on overflow
Former-commit-id: 92a3817e9312ea10ec84b3cd29b267c8ec80e7bd

--- a/web/assets/sass/base.scss
+++ b/web/assets/sass/base.scss
@@ -34,6 +34,8 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 @import "modules/gamesheet";
 
 body {
+  font-size: 14px;
+
   &.sf-toolbar {
     margin-top: 70px;
   }
